--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -19,7 +19,10 @@
         "noUnusedLocals": false,
         "noUnusedParameters": false,
         "noFallthroughCasesInSwitch": true,
-        "noUncheckedSideEffectImports": true
+        "noUncheckedSideEffectImports": true,
+        "types": [
+            "vite-plugin-svgr/client"
+        ]
     },
     "include": [
         "src"
